microservice-v1, commit 11, Modified api.yaml for validating user.
